tests/fail/missing_brackets.rs
fn main() {
    sscanf::scanf!("hi", "asdf", std::vec::Vec<std::string::String>, u32);
}
