tests/fail/missing_brackets.stderr
error: More Types than '{}' provided
 --> $DIR/missing_brackets.rs:2:34
  |
2 |     sscanf::scanf!("hi", "asdf", std::vec::Vec<std::string::String>, u32);
  |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
